--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -201,6 +201,33 @@
     ]
   },
   {
+    "title": "Hai máy bay quân sự Pháp đâm nhau trên không, nổ như cầu lửa",
+    "content": "Hai máy bay quân sự Pháp đã va chạm trên không trong một buổi tập nhào lộn vào ngày 25/3, dẫn đến vụ nổ lớn khi chúng rơi xuống đất. Vụ tai nạn xảy ra gần căn cứ không quân ở Saint-Dizier, phía đông bắc Pháp, khi hai máy bay Alpha Jet thuộc đội bay Patrouille de France đụng nhau trong lúc luyện tập. Ba phi công và một hành khách đã kịp thời nhảy dù thoát hiểm và không có thương vong nghiêm trọng nào được báo cáo.",
+    "link": "https://dantri.com.vn/the-gioi/hai-may-bay-quan-su-phap-dam-nhau-tren-khong-no-nhu-cau-lua-20250326093802097.htm",
+    "cat": "the-gioi",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Hai máy bay quân sự Pháp gặp tai nạn như thế nào?",
+    "answers": [
+      {
+        "text": "Chúng va chạm trên không và phát nổ.",
+        "correct": true
+      },
+      {
+        "text": "Chúng hạ cánh an toàn.",
+        "correct": false
+      },
+      {
+        "text": "Chúng bị tấn công từ mặt đất.",
+        "correct": false
+      },
+      {
+        "text": "Chúng bị mất tín hiệu liên lạc.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Các mốc thời gian quan trọng kỳ thi tốt nghiệp THPT 2025",
     "content": "Kỳ thi tốt nghiệp THPT năm 2025 sẽ diễn ra vào ngày 26-27 tháng 6. Thí sinh có thể đăng ký dự thi từ ngày 21/4 đến 28/4, trong đó có thời gian để đăng ký thử từ 15-18/4. Bộ GD&ĐT cũng yêu cầu thí sinh sử dụng một loại giấy tờ tùy thân nhất định và đảm bảo ảnh hồ sơ đạt yêu cầu về độ phân giải. Ngày 28/6 sẽ là lịch thi dự phòng.",
     "link": "https://dantri.com.vn/giao-duc/cac-moc-thoi-gian-quan-trong-ky-thi-tot-nghiep-thpt-2025-20250326085929751.htm",
@@ -1017,33 +1044,6 @@
     ]
   },
   {
-    "title": "Cả xóm 'biến' xe kéo lúa thành xe đón dâu độc đáo",
-    "content": "Tại xã Hùng Tiến, huyện Nam Đàn, Nghệ An, ông Nguyễn Văn Lộc cùng với bà con trong xóm đã cải tạo một chiếc xe kéo lúa thành xe đón dâu độc đáo cho đám cưới của đôi trẻ Nguyễn Văn Mạnh và Nguyễn Thu Hiền. Chiếc xe được trang trí kỳ công với hoa và bóng bay, mang lại kỷ niệm đáng nhớ cho ngày trọng đại. Đám cưới không chỉ tạo nên không khí vui vẻ mà còn thể hiện tình cảm và sự gắn kết của cộng đồng.",
-    "link": "https://vnexpress.net/ca-xom-bien-xe-keo-lua-thanh-xe-don-dau-doc-dao-4865817.html",
-    "cat": "gia-dinh",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Cộng đồng đã làm gì để tạo nên chiếc xe đón dâu đặc biệt cho đôi trẻ?",
-    "answers": [
-      {
-        "text": "Cải tạo xe kéo lúa thành xe đón dâu",
-        "correct": true
-      },
-      {
-        "text": "Thiết kế một chiếc xe máy mới",
-        "correct": false
-      },
-      {
-        "text": "Thuê xe đón dâu từ ngoài",
-        "correct": false
-      },
-      {
-        "text": "Mua một chiếc xe mới hoàn toàn",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Gặp 'cơn sốc điện' khi ngưng thuốc trầm cảm đột ngột",
     "content": "Bài viết nói về trường hợp của Vũ, một người đàn ông 32 tuổi, tự ý ngừng thuốc trầm cảm và gặp phải hội chứng ngưng thuốc nghiêm trọng. Sau ba ngày không dùng thuốc, anh cảm thấy chóng mặt, buồn nôn và có cảm giác như bị điện giật trong não. Bác sĩ khuyên anh nên quay lại dùng thuốc với liều thấp hơn và giảm dần để cơ thể thích nghi. Nhiều người khác cũng gặp tình trạng tương tự khi ngừng thuốc đột ngột, dẫn đến các triệu chứng tâm lý và thể chất nghiêm trọng.",
     "link": "https://vnexpress.net/gap-con-soc-dien-khi-ngung-thuoc-tram-cam-dot-ngot-4864993.html",
@@ -1066,6 +1066,33 @@
       },
       {
         "text": "Sử dụng thuốc không đúng cách.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cả xóm 'biến' xe kéo lúa thành xe đón dâu độc đáo",
+    "content": "Tại xã Hùng Tiến, huyện Nam Đàn, Nghệ An, ông Nguyễn Văn Lộc cùng với bà con trong xóm đã cải tạo một chiếc xe kéo lúa thành xe đón dâu độc đáo cho đám cưới của đôi trẻ Nguyễn Văn Mạnh và Nguyễn Thu Hiền. Chiếc xe được trang trí kỳ công với hoa và bóng bay, mang lại kỷ niệm đáng nhớ cho ngày trọng đại. Đám cưới không chỉ tạo nên không khí vui vẻ mà còn thể hiện tình cảm và sự gắn kết của cộng đồng.",
+    "link": "https://vnexpress.net/ca-xom-bien-xe-keo-lua-thanh-xe-don-dau-doc-dao-4865817.html",
+    "cat": "gia-dinh",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Cộng đồng đã làm gì để tạo nên chiếc xe đón dâu đặc biệt cho đôi trẻ?",
+    "answers": [
+      {
+        "text": "Cải tạo xe kéo lúa thành xe đón dâu",
+        "correct": true
+      },
+      {
+        "text": "Thiết kế một chiếc xe máy mới",
+        "correct": false
+      },
+      {
+        "text": "Thuê xe đón dâu từ ngoài",
+        "correct": false
+      },
+      {
+        "text": "Mua một chiếc xe mới hoàn toàn",
         "correct": false
       }
     ]
@@ -1399,37 +1426,6 @@
     ]
   },
   {
-    "title": "Cố đô Huế những ngày giải phóng 50 năm trước",
-    "content": "Ngày 25/3/1975, lá cờ của Quân Giải phóng miền Nam Việt Nam đã được cắm trên Kỳ đài, đánh dấu sự giải phóng hoàn toàn của cố đô Huế. Chiến dịch Huế - Đà Nẵng được thực hiện sau khi giải phóng Buôn Ma Thuột, với mục tiêu giải phóng các thành phố quan trọng này. Sau 50 năm, Huế đã trở thành một đô thị di sản hàng đầu của Việt Nam với 8 di sản văn hóa thế giới được UNESCO công nhận.",
-    "link": "https://vnexpress.net/co-do-hue-nhung-ngay-giai-phong-50-nam-truoc-4865641.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Huế được giải phóng vào ngày nào trong năm 1975?",
-    "answers": [
-      {
-        "text": "25/3/1975",
-        "correct": true
-      },
-      {
-        "text": "26/3/1975",
-        "correct": false
-      },
-      {
-        "text": "15/5/1975",
-        "correct": false
-      },
-      {
-        "text": "1/1/2025",
-        "correct": false
-      },
-      {
-        "text": "20/4/1975",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Sáp nhập tỉnh thành nên dựa vào nguyên tắc nào?",
     "content": "Chuyên gia đề xuất các nguyên tắc sáp nhập tỉnh thành tại Việt Nam, tập trung vào việc tăng số lượng địa phương có biển, nâng cao sức mạnh kinh tế và đảm bảo an ninh quốc phòng. Việc sáp nhập nhằm giảm số lượng đơn vị hành chính cấp tỉnh từ 63 xuống còn khoảng một nửa, đồng thời tạo động lực phát triển bền vững cho các địa phương. Các tiêu chí sáp nhập không chỉ dựa vào quy mô dân số và diện tích mà còn cần nghiên cứu kỹ lưỡng về quy hoạch tổng thể và chiến lược phát triển kinh tế xã hội.",
     "link": "https://vnexpress.net/sap-nhap-tinh-thanh-nen-dua-vao-nguyen-tac-nao-4865684.html",
@@ -1456,6 +1452,37 @@
       },
       {
         "text": "Tạo ra nhiều đơn vị hành chính mới",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cố đô Huế những ngày giải phóng 50 năm trước",
+    "content": "Ngày 25/3/1975, lá cờ của Quân Giải phóng miền Nam Việt Nam đã được cắm trên Kỳ đài, đánh dấu sự giải phóng hoàn toàn của cố đô Huế. Chiến dịch Huế - Đà Nẵng được thực hiện sau khi giải phóng Buôn Ma Thuột, với mục tiêu giải phóng các thành phố quan trọng này. Sau 50 năm, Huế đã trở thành một đô thị di sản hàng đầu của Việt Nam với 8 di sản văn hóa thế giới được UNESCO công nhận.",
+    "link": "https://vnexpress.net/co-do-hue-nhung-ngay-giai-phong-50-nam-truoc-4865641.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Huế được giải phóng vào ngày nào trong năm 1975?",
+    "answers": [
+      {
+        "text": "25/3/1975",
+        "correct": true
+      },
+      {
+        "text": "26/3/1975",
+        "correct": false
+      },
+      {
+        "text": "15/5/1975",
+        "correct": false
+      },
+      {
+        "text": "1/1/2025",
+        "correct": false
+      },
+      {
+        "text": "20/4/1975",
         "correct": false
       }
     ]
@@ -1809,33 +1836,6 @@
     ]
   },
   {
-    "title": "Những bệnh HPV gây ra ở nam giới",
-    "content": "Nam giới nhiễm virus HPV có thể bị các bệnh sùi mào gà, ung thư hầu họng và ung thư hậu môn, với khoảng 40 chủng virus HPV liên quan đến bộ phận sinh dục. Sùi mào gà thường gặp ở người có lối sống tình dục không lành mạnh, trong khi ung thư hầu họng liên quan đến HPV chiếm 60-70% trường hợp. Tiêm vaccine HPV là phương pháp hiệu quả để phòng ngừa các bệnh này, với hai loại vaccine Gardasil và Gardasil 9 hiện có tại Việt Nam.",
-    "link": "https://vnexpress.net/nhung-benh-hpv-gay-ra-o-nam-gioi-4865772.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Những bệnh gì do HPV gây ra ở nam giới?",
-    "answers": [
-      {
-        "text": "Sùi mào gà, ung thư hầu họng, ung thư hậu môn",
-        "correct": true
-      },
-      {
-        "text": "Cúm, sởi, quai bị",
-        "correct": false
-      },
-      {
-        "text": "Tiểu đường, tăng huyết áp",
-        "correct": false
-      },
-      {
-        "text": "Bệnh tim mạch, đột quỵ",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Sếp Xiaomi thả dưa hấu từ tầng 6 chứng minh độ bền pin xe điện",
     "content": "Giám đốc điều hành Xiaomi, Lei Jun, đã thực hiện một thử nghiệm thú vị để chứng minh độ bền của pin xe điện bằng cách thả một quả dưa hấu từ tầng 6 của nhà máy. Kết quả cho thấy quả dưa hấu không bị vỡ nhờ vào lớp bảo vệ 'áo giáp chống đạn' mà Xiaomi áp dụng cho pin xe điện SU7 Ultra. Công nghệ này giúp tăng cường độ bền và an toàn cho pin, với nhiều biện pháp bảo vệ như khung thép cường độ cao và hệ thống quản lý pin thông minh.",
     "link": "https://vnexpress.net/sep-xiaomi-tha-dua-hau-tu-tang-6-chung-minh-do-ben-pin-xe-dien-4865604.html",
@@ -1885,6 +1885,33 @@
       },
       {
         "text": "Họ ưu tiên sự hoàn hảo.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Những bệnh HPV gây ra ở nam giới",
+    "content": "Nam giới nhiễm virus HPV có thể bị các bệnh sùi mào gà, ung thư hầu họng và ung thư hậu môn, với khoảng 40 chủng virus HPV liên quan đến bộ phận sinh dục. Sùi mào gà thường gặp ở người có lối sống tình dục không lành mạnh, trong khi ung thư hầu họng liên quan đến HPV chiếm 60-70% trường hợp. Tiêm vaccine HPV là phương pháp hiệu quả để phòng ngừa các bệnh này, với hai loại vaccine Gardasil và Gardasil 9 hiện có tại Việt Nam.",
+    "link": "https://vnexpress.net/nhung-benh-hpv-gay-ra-o-nam-gioi-4865772.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Những bệnh gì do HPV gây ra ở nam giới?",
+    "answers": [
+      {
+        "text": "Sùi mào gà, ung thư hầu họng, ung thư hậu môn",
+        "correct": true
+      },
+      {
+        "text": "Cúm, sởi, quai bị",
+        "correct": false
+      },
+      {
+        "text": "Tiểu đường, tăng huyết áp",
+        "correct": false
+      },
+      {
+        "text": "Bệnh tim mạch, đột quỵ",
         "correct": false
       }
     ]
