--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "TP.HCM: Điều chỉnh quy trình thủ tục hành chính khi sắp xếp bộ máy",
+    "content": "Chủ tịch UBND TP.HCM đã giao Văn phòng UBND thành phố điều chỉnh quy trình giải quyết thủ tục hành chính tại các đơn vị, sở, ngành, và địa phương trong quá trình sắp xếp bộ máy. Cụ thể, văn phòng sẽ rà soát và tái cấu trúc quy trình nghiệp vụ, tích hợp các dịch vụ công trực tuyến trên Cổng dịch vụ công quốc gia. Hiện tại, TP.HCM đang áp dụng 1.991 thủ tục hành chính, trong đó có 52 thủ tục được tích hợp trực tuyến theo các quyết định của Thủ tướng.",
+    "link": "https://tuoitre.vn/tp-hcm-dieu-chinh-quy-trinh-thu-tuc-hanh-chinh-khi-sap-xep-bo-may-20250326112951998.htm",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 7,
+    "question": "TP.HCM đã thực hiện điều chỉnh gì trong quy trình thủ tục hành chính?",
+    "answers": [
+      {
+        "text": "Điều chỉnh quy trình giải quyết thủ tục hành chính tại các đơn vị, sở, ngành.",
+        "correct": true
+      },
+      {
+        "text": "Giảm số lượng thủ tục hành chính xuống còn 1.000.",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường nhân sự cho các phòng ban.",
+        "correct": false
+      },
+      {
+        "text": "Ngừng thực hiện các thủ tục hành chính trực tuyến.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đào đất nhặt được súng đạn, không giao nộp mà cất giấu, bị phạt 5 năm 6 tháng tù",
     "content": "Một người đàn ông ở Phú Yên, Phan Hồ Ngọc Đông, đã bị Tòa án nhân dân tỉnh Phú Yên tuyên phạt 5 năm 6 tháng tù vì tội tàng trữ trái phép vũ khí quân dụng. Đông đã phát hiện một khẩu súng và 4 viên đạn khi đào đất để làm chuồng gà nhưng không giao nộp cho cơ quan chức năng mà đem cất giấu. Đây không phải là lần đầu tiên Đông vi phạm pháp luật, trước đó anh đã có nhiều tiền án liên quan đến ma túy.",
     "link": "https://tuoitre.vn/dao-dat-nhat-duoc-sung-dan-khong-giao-nop-ma-cat-giau-bi-phat-5-nam-6-thang-tu-20250326112301733.htm",
@@ -246,6 +273,37 @@
       },
       {
         "text": "Chỉ tập trung vào các trận đấu khác",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Ra mắt bộ sách về những nhà chinh phạt nổi tiếng nhất trong lịch sử",
+    "content": "Bộ sách \"Những nhà chinh phạt và cuộc chiến vương quyền\" vừa được ra mắt, giới thiệu bốn vĩ nhân nổi tiếng gồm Alexander Đại đế, Julius Caesar, Suleiman và Hannibal. Tác giả của ba cuốn sách là nhà sử học Philip Freeman, trong khi tác phẩm về Suleiman được viết bởi André Clot. Các cuốn sách này cung cấp cái nhìn sâu sắc về cuộc đời và sự nghiệp của những nhân vật lịch sử này, thu hút sự quan tâm lớn từ độc giả yêu thích lịch sử.",
+    "link": "https://dantri.com.vn/giai-tri/ra-mat-bo-sach-ve-nhung-nha-chinh-phat-noi-tieng-nhat-trong-lich-su-20250326085803685.htm",
+    "cat": "giai-tri",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Bộ sách nào vừa ra mắt về những nhà chinh phạt nổi tiếng nhất trong lịch sử?",
+    "answers": [
+      {
+        "text": "Những nhà chinh phạt và cuộc chiến vương quyền",
+        "correct": true
+      },
+      {
+        "text": "Những nhà lãnh đạo vĩ đại",
+        "correct": false
+      },
+      {
+        "text": "Cuộc chiến vương quyền",
+        "correct": false
+      },
+      {
+        "text": "Huyền thoại chinh phạt",
+        "correct": false
+      },
+      {
+        "text": "Bốn vĩ nhân trong lịch sử",
         "correct": false
       }
     ]
@@ -846,6 +904,33 @@
     ]
   },
   {
+    "title": "Hy hữu: Công ty nhiệt điện của Geleximco báo ‘nhầm’ lỗ đậm thành lãi, huy động nghìn tỉ trái phiếu",
+    "content": "Công ty cổ phần Nhiệt điện Thăng Long, thuộc Tập đoàn Geleximco, vừa đính chính một sai sót nghiêm trọng trong báo cáo tài chính khi báo lãi thay vì lỗ. Theo đó, công ty đã ghi nhận lỗ 528 tỉ đồng cho năm 2023, trong khi năm 2022 lãi 121,8 tỉ đồng. Sai sót này được cho là do nhầm lẫn trong việc đánh dấu vị trí cột 'kỳ trước' và 'kỳ báo cáo'. Ngoài ra, công ty cũng đã huy động gần 1.800 tỉ đồng từ phát hành trái phiếu doanh nghiệp vào tháng 8-2024.",
+    "link": "https://tuoitre.vn/hy-huu-cong-ty-nhiet-dien-cua-geleximco-bao-nham-lo-dam-thanh-lai-huy-dong-nghin-ti-trai-phieu-20250326091855138.htm",
+    "cat": "kinh-doanh",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao Nhiệt điện Thăng Long phải đính chính báo cáo tài chính?",
+    "answers": [
+      {
+        "text": "Vì sai sót trong việc báo cáo lãi thành lỗ",
+        "correct": true
+      },
+      {
+        "text": "Do thay đổi ban lãnh đạo",
+        "correct": false
+      },
+      {
+        "text": "Vì áp lực từ cổ đông",
+        "correct": false
+      },
+      {
+        "text": "Do quy định mới của HNX",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Các mốc thời gian quan trọng kỳ thi tốt nghiệp THPT 2025",
     "content": "Kỳ thi tốt nghiệp THPT năm 2025 sẽ diễn ra vào ngày 26-27 tháng 6. Thí sinh có thể đăng ký dự thi từ ngày 21/4 đến 28/4, trong đó có thời gian để đăng ký thử từ 15-18/4. Bộ GD&ĐT cũng yêu cầu thí sinh sử dụng một loại giấy tờ tùy thân nhất định và đảm bảo ảnh hồ sơ đạt yêu cầu về độ phân giải. Ngày 28/6 sẽ là lịch thi dự phòng.",
     "link": "https://dantri.com.vn/giao-duc/cac-moc-thoi-gian-quan-trong-ky-thi-tot-nghiep-thpt-2025-20250326085929751.htm",
@@ -872,33 +957,6 @@
       },
       {
         "text": "Thí sinh chỉ cần thi một môn duy nhất",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Hy hữu: Công ty nhiệt điện của Geleximco báo ‘nhầm’ lỗ đậm thành lãi, huy động nghìn tỉ trái phiếu",
-    "content": "Công ty cổ phần Nhiệt điện Thăng Long, thuộc Tập đoàn Geleximco, vừa đính chính một sai sót nghiêm trọng trong báo cáo tài chính khi báo lãi thay vì lỗ. Theo đó, công ty đã ghi nhận lỗ 528 tỉ đồng cho năm 2023, trong khi năm 2022 lãi 121,8 tỉ đồng. Sai sót này được cho là do nhầm lẫn trong việc đánh dấu vị trí cột 'kỳ trước' và 'kỳ báo cáo'. Ngoài ra, công ty cũng đã huy động gần 1.800 tỉ đồng từ phát hành trái phiếu doanh nghiệp vào tháng 8-2024.",
-    "link": "https://tuoitre.vn/hy-huu-cong-ty-nhiet-dien-cua-geleximco-bao-nham-lo-dam-thanh-lai-huy-dong-nghin-ti-trai-phieu-20250326091855138.htm",
-    "cat": "kinh-doanh",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao Nhiệt điện Thăng Long phải đính chính báo cáo tài chính?",
-    "answers": [
-      {
-        "text": "Vì sai sót trong việc báo cáo lãi thành lỗ",
-        "correct": true
-      },
-      {
-        "text": "Do thay đổi ban lãnh đạo",
-        "correct": false
-      },
-      {
-        "text": "Vì áp lực từ cổ đông",
-        "correct": false
-      },
-      {
-        "text": "Do quy định mới của HNX",
         "correct": false
       }
     ]
@@ -2044,37 +2102,6 @@
     ]
   },
   {
-    "title": "Sáp nhập tỉnh thành nên dựa vào nguyên tắc nào?",
-    "content": "Chuyên gia đề xuất các nguyên tắc sáp nhập tỉnh thành tại Việt Nam, tập trung vào việc tăng số lượng địa phương có biển, nâng cao sức mạnh kinh tế và đảm bảo an ninh quốc phòng. Việc sáp nhập nhằm giảm số lượng đơn vị hành chính cấp tỉnh từ 63 xuống còn khoảng một nửa, đồng thời tạo động lực phát triển bền vững cho các địa phương. Các tiêu chí sáp nhập không chỉ dựa vào quy mô dân số và diện tích mà còn cần nghiên cứu kỹ lưỡng về quy hoạch tổng thể và chiến lược phát triển kinh tế xã hội.",
-    "link": "https://vnexpress.net/sap-nhap-tinh-thanh-nen-dua-vao-nguyen-tac-nao-4865684.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Sáp nhập tỉnh thành nên dựa vào những nguyên tắc nào?",
-    "answers": [
-      {
-        "text": "Tăng tối đa số lượng địa phương có biển",
-        "correct": true
-      },
-      {
-        "text": "Giảm quy mô dân số",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường sử dụng lao động giá rẻ",
-        "correct": false
-      },
-      {
-        "text": "Chỉ dựa vào diện tích tự nhiên",
-        "correct": false
-      },
-      {
-        "text": "Tạo ra nhiều đơn vị hành chính mới",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cố đô Huế những ngày giải phóng 50 năm trước",
     "content": "Ngày 25/3/1975, lá cờ của Quân Giải phóng miền Nam Việt Nam đã được cắm trên Kỳ đài, đánh dấu sự giải phóng hoàn toàn của cố đô Huế. Chiến dịch Huế - Đà Nẵng được thực hiện sau khi giải phóng Buôn Ma Thuột, với mục tiêu giải phóng các thành phố quan trọng này. Sau 50 năm, Huế đã trở thành một đô thị di sản hàng đầu của Việt Nam với 8 di sản văn hóa thế giới được UNESCO công nhận.",
     "link": "https://vnexpress.net/co-do-hue-nhung-ngay-giai-phong-50-nam-truoc-4865641.html",
@@ -2101,6 +2128,37 @@
       },
       {
         "text": "20/4/1975",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Sáp nhập tỉnh thành nên dựa vào nguyên tắc nào?",
+    "content": "Chuyên gia đề xuất các nguyên tắc sáp nhập tỉnh thành tại Việt Nam, tập trung vào việc tăng số lượng địa phương có biển, nâng cao sức mạnh kinh tế và đảm bảo an ninh quốc phòng. Việc sáp nhập nhằm giảm số lượng đơn vị hành chính cấp tỉnh từ 63 xuống còn khoảng một nửa, đồng thời tạo động lực phát triển bền vững cho các địa phương. Các tiêu chí sáp nhập không chỉ dựa vào quy mô dân số và diện tích mà còn cần nghiên cứu kỹ lưỡng về quy hoạch tổng thể và chiến lược phát triển kinh tế xã hội.",
+    "link": "https://vnexpress.net/sap-nhap-tinh-thanh-nen-dua-vao-nguyen-tac-nao-4865684.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Sáp nhập tỉnh thành nên dựa vào những nguyên tắc nào?",
+    "answers": [
+      {
+        "text": "Tăng tối đa số lượng địa phương có biển",
+        "correct": true
+      },
+      {
+        "text": "Giảm quy mô dân số",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường sử dụng lao động giá rẻ",
+        "correct": false
+      },
+      {
+        "text": "Chỉ dựa vào diện tích tự nhiên",
+        "correct": false
+      },
+      {
+        "text": "Tạo ra nhiều đơn vị hành chính mới",
         "correct": false
       }
     ]
@@ -2914,6 +2972,37 @@
     ]
   },
   {
+    "title": "Thí sinh Ngọc Hà đạt Giải nhất thi hát trực tuyến với bản hit của Hòa Minzy",
+    "content": "Thí sinh Ngọc Hà đã xuất sắc giành Giải nhất cuộc thi hát trực tuyến \"Bài ca thống nhất\" với màn trình diễn ca khúc \"Kén cá chọn canh\" của Hòa Minzy. Cuộc thi do Hội Nhạc sĩ Việt Nam tổ chức nhằm kỷ niệm 50 năm thống nhất đất nước, thu hút hơn 1.000 thí sinh tham gia. Ngọc Hà, 31 tuổi và là một nghệ sĩ đã có nhiều thành tích trong âm nhạc, đã chinh phục ban giám khảo và khán giả với giọng hát cao vút và phong cách biểu diễn ấn tượng.",
+    "link": "https://dantri.com.vn/giai-tri/thi-sinh-ngoc-ha-dat-giai-nhat-thi-hat-truc-tuyen-voi-ban-hit-cua-hoa-minzy-20250325162752412.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Ngọc Hà đã giành giải gì trong cuộc thi hát trực tuyến \"Bài ca thống nhất\"?",
+    "answers": [
+      {
+        "text": "Giải nhất",
+        "correct": true
+      },
+      {
+        "text": "Giải nhì",
+        "correct": false
+      },
+      {
+        "text": "Giải ba",
+        "correct": false
+      },
+      {
+        "text": "Giải khuyến khích",
+        "correct": false
+      },
+      {
+        "text": "Giải thí sinh được yêu thích nhất",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Kháng insulin gây mụn trứng cá thế nào",
     "content": "Kháng insulin có thể làm tăng mức độ hormone androgen trong cơ thể, từ đó thúc đẩy tăng tiết bã nhờn và làm nặng thêm tình trạng mụn trứng cá. Tình trạng này thường gặp ở thanh thiếu niên và người lớn, gây ra bởi sự tích tụ đường trong máu và kích thích các tuyến sản xuất hormone. Đặc biệt, kháng insulin còn liên quan đến viêm mạn tính, làm cho tình trạng mụn trở nên nghiêm trọng hơn, đặc biệt là ở phụ nữ có hội chứng buồng trứng đa nang (PCOS). Để điều trị, cần kết hợp giữa phương pháp da liễu và thay đổi lối sống, bao gồm chế độ ăn uống lành mạnh.",
     "link": "https://vnexpress.net/khang-insulin-gay-mun-trung-ca-the-nao-4865724.html",
@@ -2963,37 +3052,6 @@
       },
       {
         "text": "Thịt gà, khoai tây, hành tây",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Thí sinh Ngọc Hà đạt Giải nhất thi hát trực tuyến với bản hit của Hòa Minzy",
-    "content": "Thí sinh Ngọc Hà đã xuất sắc giành Giải nhất cuộc thi hát trực tuyến \"Bài ca thống nhất\" với màn trình diễn ca khúc \"Kén cá chọn canh\" của Hòa Minzy. Cuộc thi do Hội Nhạc sĩ Việt Nam tổ chức nhằm kỷ niệm 50 năm thống nhất đất nước, thu hút hơn 1.000 thí sinh tham gia. Ngọc Hà, 31 tuổi và là một nghệ sĩ đã có nhiều thành tích trong âm nhạc, đã chinh phục ban giám khảo và khán giả với giọng hát cao vút và phong cách biểu diễn ấn tượng.",
-    "link": "https://dantri.com.vn/giai-tri/thi-sinh-ngoc-ha-dat-giai-nhat-thi-hat-truc-tuyen-voi-ban-hit-cua-hoa-minzy-20250325162752412.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Ngọc Hà đã giành giải gì trong cuộc thi hát trực tuyến \"Bài ca thống nhất\"?",
-    "answers": [
-      {
-        "text": "Giải nhất",
-        "correct": true
-      },
-      {
-        "text": "Giải nhì",
-        "correct": false
-      },
-      {
-        "text": "Giải ba",
-        "correct": false
-      },
-      {
-        "text": "Giải khuyến khích",
-        "correct": false
-      },
-      {
-        "text": "Giải thí sinh được yêu thích nhất",
         "correct": false
       }
     ]
@@ -3567,33 +3625,6 @@
     ]
   },
   {
-    "title": "Bệnh lao phổi có thể chữa khỏi không?",
-    "content": "Bệnh lao phổi có thể chữa khỏi hoàn toàn nếu được phát hiện sớm và điều trị theo đúng phác đồ. Tỷ lệ điều trị thành công đối với lao phổi nhạy cảm với thuốc lên đến khoảng 95%, trong khi lao kháng thuốc có tỷ lệ thành công từ 60-80%. Người bệnh cần tuân thủ nghiêm ngặt thời gian và liều lượng thuốc, đồng thời duy trì chế độ dinh dưỡng hợp lý để tăng cường sức đề kháng.",
-    "link": "https://vnexpress.net/benh-lao-phoi-co-the-chua-khoi-khong-4865645.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Bệnh lao phổi có chữa khỏi hoàn toàn không?",
-    "answers": [
-      {
-        "text": "Có, nếu phát hiện sớm và điều trị đúng cách.",
-        "correct": true
-      },
-      {
-        "text": "Không, bệnh lao phổi không thể chữa khỏi.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ ở những người trẻ tuổi.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ với thuốc đặc trị.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "VAS tiên phong chuyển đổi số, tích hợp AI vào giảng dạy cho học sinh",
     "content": "Trường Quốc tế Việt Úc (VAS) đang tiên phong trong việc chuyển đổi số và tích hợp trí tuệ nhân tạo (AI) vào chương trình giảng dạy cho học sinh. Được tổ chức vào ngày 15/3, hội thảo \"Tối ưu cuộc sống với AI\" thu hút sự tham gia của hơn 200 phụ huynh và 1 triệu lượt xem trực tuyến. Từ năm học 2025-2026, học sinh VAS sẽ có một tiết học về AI mỗi tuần, nhằm trang bị kỹ năng cần thiết cho thế hệ công dân số. VAS cam kết không ngừng đổi mới và phát triển để giữ vững vị thế hàng đầu trong giáo dục quốc tế tại Việt Nam.",
     "link": "https://dantri.com.vn/giao-duc/vas-tien-phong-chuyen-doi-so-tich-hop-ai-vao-giang-day-cho-hoc-sinh-20250325141325818.htm",
@@ -3616,6 +3647,33 @@
       },
       {
         "text": "Học sinh chỉ học lý thuyết về AI.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bệnh lao phổi có thể chữa khỏi không?",
+    "content": "Bệnh lao phổi có thể chữa khỏi hoàn toàn nếu được phát hiện sớm và điều trị theo đúng phác đồ. Tỷ lệ điều trị thành công đối với lao phổi nhạy cảm với thuốc lên đến khoảng 95%, trong khi lao kháng thuốc có tỷ lệ thành công từ 60-80%. Người bệnh cần tuân thủ nghiêm ngặt thời gian và liều lượng thuốc, đồng thời duy trì chế độ dinh dưỡng hợp lý để tăng cường sức đề kháng.",
+    "link": "https://vnexpress.net/benh-lao-phoi-co-the-chua-khoi-khong-4865645.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Bệnh lao phổi có chữa khỏi hoàn toàn không?",
+    "answers": [
+      {
+        "text": "Có, nếu phát hiện sớm và điều trị đúng cách.",
+        "correct": true
+      },
+      {
+        "text": "Không, bệnh lao phổi không thể chữa khỏi.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ ở những người trẻ tuổi.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ với thuốc đặc trị.",
         "correct": false
       }
     ]
